--- a/nested_key_value_pair_tree_viewer/package.json
+++ b/nested_key_value_pair_tree_viewer/package.json
@@ -13,6 +13,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "pug": "^3.0.2",
+    "sass": "^1.60.0",
+    "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
 }
