--- a/random_user/package.json
+++ b/random_user/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.18.0",
     "reset-css": "^5.0.1",
     "sass": "^1.60.0",
+    "terser": "^5.16.8",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
